sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:14: error: not found: value i
			var j=N-i
                                ^AlgCocktailSort2:15: error: not found: value i
			if (plusPetit(i+1,i)){
                                      ^AlgCocktailSort2:16: error: not found: value i
				echange(i+1,i)
                                        ^