sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	var ech:Boolean = true
	var N:Int = getNombreValeurs()-2
	while(ech) {
		ech=false
		for (i<-0 to N) {
			if (plusPetit(i+1,i)){
				echange(i+1,i)
				ech=true
			}
		}
		for (j<-0 to N) {
			var j=N-i
			if (plusPetit(i+1,i)){
				echange(i+1,i)
				ech=true
			}
		}
		
	}
	
}
